# ForensicsChallenge2023

./: .gitattributes  .gitignore  README.md  chat.html  transcription.txt
Texture2.0/: texturedMesh.mtl  texturedMesh.obj.mtl
Vastervik/: find.py  gen.py
Vastervik/nerf/: dataset.py  eval.py  geometry.py  model.py  optimize.py  scene.py  train.py
amazon_rekognition/: credentials.py  detect_people.py  video.json
audio_detection/: shots.py  shots2.py  speech.py
audio_detection/speech_recognition_fromscratch/: README.md  listen.ipynb  model1.py  model2.py  rec.py  test.ipynb
audio_detection/speech_recognition_fromscratch/v1/: decoder  decoder_architecture  encoder  encoder_architecture  listen.ipynb  (+6 more)
body_detection/: body_detection.py  body_detection_5.py  body_detection_r.py  body_detection_r2.py
body_detection/violent_detection/: ViolenceDetection.ipynb  frame.py  train.py
details_detection/: config.yaml  gun_detection.py  things_detection.py  train.py
details_detection/cococo/: coco.txt
details_detection/train16/: args.yaml  results.csv
details_detection/train25/: args.yaml  results.csv
details_detection/train_data/: README.dataset.txt  README.roboflow.txt
forencics_site/: .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
forencics_site/forencics/: configuration.py  controller.py  filters.py  server.py  utils.py
forencics_site/forencics/static/: layout.css  layout_info.css  style.css
forencics_site/forencics/templates/: downloads.html  info.html  main.html  model.html  pres.html
video_description/: gen_gpt.py  gen_t5.py
(+1808 files in other folders)
